# ilmari

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: overview.md
scripts/: package-release.ps1  package-release.sh  resolve-version.sh
src/: app.rs  colors.rs  git.rs  main.rs  model.rs  process.rs  sound.rs  tmux.rs  ui.rs
src/agents/: mod.rs
