[package]
name = "ilmari"
version = "0.1.1"
edition = "2021"
license = "MIT"
rust-version = "1.86.0"
description = "Minimal tmux popup radar for coding agents"
readme = "README.md"
homepage = "https://github.com/bnomei/ilmari"
repository = "https://github.com/bnomei/ilmari"
documentation = "https://docs.rs/ilmari"
keywords = ["tmux", "tui", "cli", "developer-tools", "terminal"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".DS_Store", "docs/**", "loops/**", "specs/**"]

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
time = { version = "0.3", features = ["local-offset"] }
